# planet-pass

./: .gitignore  README.md
.github/workflows/: backend.yml  contracts.yml
backend/: .gitignore  Cargo.toml  Dockerfile
backend/metadata-db/: Cargo.toml  README.md
backend/metadata-db/src/: database.rs  error.rs  lib.rs  prelude.rs
backend/metadata-modtool/: Cargo.toml  README.md
backend/metadata-modtool/src/: add.rs  cli.yml  items.rs  main.rs
backend/server/: README.md
contract/: .gitignore  .solcover.js  hardhat.config.ts  package-lock.json  package.json
contract/contracts/: Dummy.sol  DummyWETH.sol  Flashstamp.sol  Hyperstore.sol  Nameable.sol  PlanetPassItems.sol  Stardust.sol  TravelAgency.sol  WanderersPass.sol  WanderersPlanet.sol  WanderersPlanetPass.sol
contract/scripts/: airdrop.ts  merkle.ts
contract/test/: test-agency.ts  test-pass.ts  test-planet.ts  test-planetpass.js  test-planetpass.ts  test-stardust.ts
frontend/: next.config.js  package-lock.json  package.json
frontend/assets/: planetManifest.json  visitLottieDataWithImg.js
frontend/context/: TransactionContext.tsx  Web3Context.tsx
frontend/pages/: _app.tsx  all-planets.tsx  atlas.tsx  index.tsx  lottie-test.tsx  planet-pass.tsx  planets.tsx  store.tsx
frontend/styles/: _mixins.scss  _vars.scss  globals.scss
frontend/types/: index.ts
frontend/utils/: fakeData.js  fakeData.ts
generation/: combine_metadata.py  copy_thumbnails.sh  ff.sh  make.py  metadata.py  metadata_b2.sh  planet_manifest.json  videos_b2.sh
generation/b2/: metadata.sh  thumbnail.sh  videos.sh
(+75 files in other folders)
