[package]
name = "metadata-modtool"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "~2.33.3", features = ["yaml"] }
serde = { version = "~1.0.130", features = ["derive"] }
serde_json = "~1.0.68"
metadata-db = { path = "../metadata-db" }
sled = "~0.34.7"
anyhow = "~1.0.44"